<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".AddActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="80dp"
        android:hint="@string/add_hint_name"
        android:textColorHint="@color/white_hint">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_hint_name"
            android:inputType="textCapSentences"
            android:textColor="@color/lightish_blue"
            android:textSize="24sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/price_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:hint="@string/add_hint_price"
        android:textColorHint="@color/white_hint">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_hint_price"
            android:inputType="number"
            android:textColor="@color/lightish_blue"
            android:textSize="24sp" />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/addBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="56dp"
        android:background="@null"
        android:drawablePadding="6dp"
        android:drawableStart="@drawable/ic_check"
        android:enabled="false"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:text="@string/add_button"
        android:textColor="@color/color_button_text"
        android:textSize="14sp" />
</LinearLayout>